# streaming-chat-agent

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml  run_evals.py
.github/workflows/: ci.yml
app/: main.py
app/api/: chat.py
app/domain/: actions.py  events.py  messages.py  tools.py
app/models/: ollama.py  protocol.py  rule_based.py
app/services/: assistant.py  conversation_store.py  tool_registry.py
app/static/: app.js  index.html
app/tools/: calculator.py  weather.py  weather_live.py
tests/: test_api_stream.py  test_assistant_service.py  test_calculator.py  test_golden_cases.py  test_model_selection.py  test_ollama_adapter.py  test_registry_and_store.py  test_rule_based_model.py  test_weather_tool.py
tests/cases/: basic.jsonl
